# nasi-ayam

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  nasi-ayam  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: overview.md
example-data/: suggested-prompts.md
example-data/github/: cat-behavior-explained.txt  cats-i-hate.md  cherry-blossom-magic.txt  chinchilla-dust-baths.md  cockatiel-personality.md  complete-puppy-guide.txt  coral-bells.txt  daisy-chains.md  ferret-fun.txt  fluffy-bunnies.md  garden-visitors.txt  goldfish-facts.txt  guinea-pig-sounds.md  hamster-pouches.txt  hedgehog-habits.md  hummingbird-world.md  hydrangea-colors.txt  kitten-dreams.txt  lavender-benefits.md  pansy-colors.md  puppy-expressions.txt  pygmy-goats.md  rose-garden-care.md
example-data/local/: baby-animals.md  best-cats.md  bunny-binky.txt  butterfly-garden.md  butterfly-watching.txt  cottage-garden-creation.md  cozy-pets.md  duckling-adventures.txt  golden-retriever-puppies.md  hamster-happiness.md  holland-lop-bunnies.md  kitten-playtime.md  labrador-retriever-guide.md  maine-coon-complete-guide.md  morning-glory-magic.txt  peony-paradise.txt  perfect-flower-garden.txt  persian-cat-care.md  puppy-cuddles.txt  rabbit-care-complete.md  rainbows.txt  sleeping-puppies.txt  spring-flowers.txt  (+5 more)
nasi_ayam/: __init__.py  config.py  database.py  logging.py  main.py  progress.py  spinner.py
scripts/: generate_sample_data.py
specifications/: nasi-ayam.md
tests/: __init__.py  test_chunker.py  test_loader.py
(+10 files in other folders)
