[tool.poetry]
name = "nasi-ayam"
version = "0.1.0"
description = "A knowledge retrieval chatbot using RAG and Claude"
authors = ["James Pike"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "nasi_ayam"}]

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^1.2.6"
langchain-anthropic = "^1.3.1"
langchain-postgres = "^0.0"
sentence-transformers = "^5.2"
psycopg = {extras = ["binary"], version = "^3.3"}
alembic = "^1.18"
pymupdf4llm = "^0.2"
httpx = "^0.28"
einops = "^0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
mypy = "^1.19"
black = "^26.1"
flake8 = "^7.3"

[tool.poetry.scripts]
nasi-ayam = "nasi_ayam.main:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
